# brew-gc

./: README.md  pyproject.toml
src/brew_gc/: __main__.py
