[project]
name = "brew-gc"
version = "0.0.0"
description = ""
authors = [{ name = "Timofey Kukushkin", email = "tima@kukushkin.me" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
scripts.brew-gc = "brew_gc.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
